--- a/index.html
+++ b/index.html
@@ -8,10 +8,37 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello, World!</h1>
-    <p>Wassup Chat</p>
-    <img src="" alt="" srcset="" />
-    <link rel="stylesheet" href="Page 1.html" />
+    <div class="Topcontainer">
+      <div class="top item">
+        <img id="logo" src="Logo.png" alt="" />
+      </div>
+      <div class="top item"><a href="TopText">Home</a></div>
+      <div class="top item"><a href="TopText">Profile</a></div>
+      <div class="top item"><a href="TopText">Chatroom</a></div>
+      <div class="top item"><a href="TopText">Friends</a></div>
+      <div class="top item"><a href="TopText">About</a></div>
+    </div>
+
+    <h1>Welcome to GameChat</h1>
+    <p>
+      Us in the GameChat Community wants you to find someone within the same
+      interest.
+    </p>
+
+    <div class="Midcontainer">
+      <div class="top item">Server 4</div>
+      <div class="top item">Server 5</div>
+      <div class="top item">Server 6</div>
+    </div>
+
+    <div class="groundcontainer">
+      <div class="top item">Server 1</div>
+      <div class="top item">Server 2</div>
+      <div class="top item">Server 3</div>
+    </div>
+
+    <h1>Wassup chat</h1>
+
     <script src="index.js"></script>
   </body>
 </html>
